# paddle-sttn

./: .gitignore  README.md  debug_ocr.py  find_chinese.py  pyproject.toml  run.sh
src/: __init__.py  config.py  main.py
src/ffmpeg/linux_x64/: fs_manifest.csv
src/ffmpeg/macos/: fs_manifest.csv
src/inpaint/: lama_inpaint.py  sttn_inpaint.py  video_inpaint.py
src/inpaint/sttn/: auto_sttn.py  network_sttn.py
src/inpaint/utils/: sttn_utils.py
src/inpaint/video/model/: misc.py  propainter.py  recurrent_flow_completion.py
src/inpaint/video/model/modules/: flow_comp_raft.py
src/models/sttn/: fs_manifest.csv
src/scenedetect/: __init__.py  __main__.py  scene_detector.py  scene_manager.py  stats_manager.py  video_manager.py  video_stream.py
src/scenedetect/_cli/: __init__.py  config.py  context.py  controller.py
src/scenedetect/backends/: __init__.py  moviepy.py  opencv.py  pyav.py
src/scenedetect/detectors/: __init__.py  adaptive_detector.py  content_detector.py  threshold_detector.py
src/tools/: common_tools.py  inpaint_tools.py  makedist.py  merge_video.py
src/tools/train/: dataset_sttn.py  loss_sttn.py  train_sttn.py  trainer_sttn.py
