[project]
name = "paddle-sttn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "albumentations~=1.4.10",
    "av>=12.0.0",
    "easydict==1.13",
    "einops==0.8.1",
    "filesplit==3.0.2",
    "imgaug==0.4.0",
    "lmdb==1.6.2",
    "numpy>=1.26.4",
    "omegaconf==2.3.0",
    "onnxruntime-gpu==1.20.1",
    "opencv-python==4.11.0.86",
    "paddle2onnx==1.3.1",
    "paddleocr>=2.7.0",
    "paddlepaddle-gpu>=3.3.0",
    "pandas==2.2.3",
    "protobuf",
    "pyclipper==1.3.0.post6",
    "pyyaml==6.0.2",
    "scikit-image==0.25.2",
    "scikit-learn==1.6.1",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "tqdm==4.67.1",
    "webdataset==0.2.111",
    "nvidia-nccl-cu12",
]

[[tool.uv.index]]
name = "paddle"
url = "https://www.paddlepaddle.org.cn/packages/stable/cu124/"
explicit = true

[tool.uv.sources]
paddlepaddle-gpu = { index = "paddle" }
paddle2onnx = { index = "paddle" }

[tool.uv]
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'win32' and platform_machine == 'x86_64'",
]
